add deployment deo

--- a/redis-master-service.yaml
+++ b/redis-master-service.yaml
@@ -3,10 +3,14 @@ kind: Service
 metadata:
     name: redis-master
     labels:
-        name: redis-master
+        app: redis
+        role: master
+        tier: backend
 spec:
     ports:
     - port: 6379
       targetPort: 6379
     selector:
-        name: redis-master
+        app: redis
+        role: master
+        tier: backend
